--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Siema</h1>
+
+    <section class="banner">
+        <h1>Rorun.<br />Biegaj z nami</h1>
+        <p>Rorun to bezpłatna,aplikacja i strona internetowa<br>która bawi i motywuje do uprawiania sportu.</h3>
+        <a href="#">www.rorun.com</a>
+    </section>
+
 </body>
 </html>
